Remove deprecated constructor call